# immich-extended

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PRD.md  README.md
.github/workflows/: ci.yml
.sqlx/: query-02d03cb1b8c351893fec67f91ce9003571fa8a58b9f916f94291459a1720d150.json  query-032aa41a03520c54799db31046e0684083dd67322a3c1e590b8d47925f89af6a.json  query-08ef3d7bec075b9af6e3e3ce245a204b52bf20e10aed8d1509dbd23c2d9b711e.json  query-0c50215b6a26e35137d6224d51c2a2d639694710398d6cf1694d8b8650d9caca.json  query-0f662455909d9b36435772de9741a043b215bcb7fbe4f3556e7167de516b6ba8.json  query-1193bd45a196b3781979daeb14cf6cbe804d2d1a16ce4ffb4a821e7d5d336624.json  query-1697e929731a576fd0922a2ed03fc6a1cc8d3b500d3df9566370d10370b40e9d.json  query-192519bfc4775ea93804f839be3e9f2ed3b5bd654b118f8c9bc90b9c82e14f73.json  query-1ca059e253d792d2683bf5424fd5b685f17d18e49ac5d052e447ccfb0821b23a.json  query-2112059a6c2bfdda17b857cb0a3003247a12eccbc9561a91bf2814aed892adfe.json  query-223bb0f9d34f4b4be394d938c34baf155f9e952307208d5336f56b64985b9c76.json  query-246d06f4e8cb77d3e7378aa669fcd15e150600a9482cd9d6b8409118c72c526e.json  query-25bda50d6e771c8e2a851ab8d49678f1b7c1974034cd3ecdc1bc04faf0962d6c.json  query-2747e626704616e133f189e415466f1278594e78a21ac790b07506c892c88f79.json  query-2eb5bb21cfe1a3460866ef5830359f11f643151e23feace3f6ca7779cb637012.json  query-303754b82e6e2a904f30e6f71321ec656c1ca2ec7fa8b24bb49e6232e461405e.json  query-30f06672c4709d52d9f12c109e9f86c079628f9a2635c949eddb5008d706b76a.json  query-32b4ef76f10beedf48c6ceeae1635975f3d5e939e50ebeb12a3160d1d28ace46.json  query-3377beed82b1e4a28de219c873200108f30751e06e64cace9525ed0c4dc5c442.json  query-33af288fa04250cc7080466a9c38e8f2d84e50590cf2868de33f069cf2251189.json  query-37e4536b26182db1447ee936575f98e05124b71d65001525ee6b1732f8d0eaf1.json  query-3b6f70c32af2484d3ed8f18c3a8de7c305b3bf30c0feb5b77d9f99ed3c9f1233.json  query-3bf7df34be3822fb5317a1df6bf6f8ca6ac7d1fe4d0bbcbad26c0045933a7580.json  query-4316fea7349fb5e2ec5805f9805c138feb91800874e2aaa66d4500e451f83f18.json  query-439db45bc739d06c26f72b2ba6950aaff960433782fb5fc5f6e847569e34d343.json  query-455a76209a87f5e336e980ad7147a0081daefd27f248eec2d46e2f7923122ccb.json  query-473f3c40a4741f144a048e9a5b9b89279ec4bf73f75ef4d2d97c6f6b8c61d498.json  query-47610ce470b4da82779fd930e68b4dd87eaaa4d33d322565d956a6bea133edff.json  query-4dd75fa1b401d846680c83783da8297726b3ce931e9d080ef4e96a64f6274024.json  query-4dda6a2db9625cc6a8ad6ff56cd897c0d6c1b337c03ae63eea9e6dcac60693eb.json  query-50f002bcb416fff62e2eac808c1971edc8a380b722409a3cb3a9d51877445ae8.json  query-542ae0cb35652a1115c6e62dd7cd8060b90aa4141190f06f23cf03e09384573d.json  query-5897bbeb18222402f82481d9840d290736434b7d57b31df32252a25023c016b1.json  query-59553f54a7e406d59e26d27f1c2b90ffed566e8356cb6e50587a357aa1419f69.json  query-5abbee7cc0cacceadd38b2accecbbcf47d519f51180b579d628383c5878e9251.json  query-5cf83ad710417f3071677349b12c4ef5412df999a6f954a0da1df7d3694f4922.json  query-6419f14828f3d3dab91775a89de9878423df559af85939f82133519f0e49da37.json  query-65f2f30d60a84b759dec85d5639fa258391382fe1f3705a9c652f74c615bcff4.json  query-669dd36f917737a0ca02c6268a668c0df819444a6ed1e9e150f71c385758504e.json  query-67c6bf2f1c4e33031e89c7d975ff7862d7ac35682753cc2f4986d324c8d5d550.json  (+54 more)
crates/common/: Cargo.toml
crates/common/src/: db.rs  decisions.rs  lib.rs  users.rs  yolo_cache.rs
crates/common/src/auth/: mod.rs  password.rs
crates/common/src/crypto/: master_key.rs  mod.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/predicate/: mod.rs
crates/engine/src/rule/: match_expr.rs  mod.rs  parser.rs  schema.rs  validator.rs
crates/immich-client/: Cargo.toml
crates/immich-client/src/: lib.rs
crates/immich-client/tests/: download.rs  people_albums.rs
crates/server/: Cargo.toml
crates/server/src/: activity.rs  admin.rs  album_sync.rs  config.rs  engine_cycle.rs  engine_scheduler.rs  indexer.rs  lib.rs  main.rs  matcher.rs
crates/server/src/auth/: extractor.rs  middleware.rs  mod.rs  oidc.rs  routes.rs  session.rs
crates/server/src/me/: activity.rs  immich_key.rs  immich_proxy.rs  index_status.rs  mod.rs  routes.rs
crates/server/src/rules/: handlers.rs  mod.rs  resolver.rs  routes.rs
crates/server/src/setup/: mod.rs  routes.rs
crates/server/tests/: admin_cli.rs  album_sync.rs  auth_local.rs  cross_account_isolation.rs  engine_cycle.rs  engine_cycle_yolo.rs  health.rs  immich_key.rs  index_status.rs  indexer.rs  indexer_match.rs  match_assets.rs  matcher.rs  me_activity.rs  me_immich.rs  oidc.rs  rule_decisions.rs  rule_match_count.rs  rule_runs.rs  rules_crud.rs  scheduler.rs  setup.rs  static_assets.rs
crates/yolo/: Cargo.toml
crates/yolo/src/: error.rs  lib.rs  model.rs  postprocess.rs  preprocess.rs  session.rs  video.rs
crates/yolo/tests/: inference.rs  video.rs
crates/yolo/tests/fixtures/: README.md
docs/: API.md
docs/design/: block-rule-schema.md  dnd-block-builder.md  event-driven-matching.md  immich-style-mirror.md  inline-sentence-builder.md  preprocessing-index.md
docs/postship/: cycle-4-verify.md  cycle-5-verify.md  cycle-6-verify.md  cycle-7-verify.md  cycle5-t26-album-backfill-verify.md  cycle5-t29-index-matching-verify.md  cycle5-t30-account-menu-verify.md  cycle5-t31-rules-home-verify.md  cycle5-t32-per-rule-activity-verify.md  cycle5-t33-activity-verify.md  cycle5-t35-builder-verify.md  cycle6-t44-activity-verify.md  cycle7-t47-builder-verify.md  cycle7-t48-pills-verify.md  cycle7-t49-excepts-verify.md  cycle7-t50-areas-verify.md  cycle7-t51-dnd-verify.md  oidc-regression-001-verify.md  oidc-regression-001.md  (+3 more)
examples/: 01-family-restricted.yaml  02-trip-paris.yaml  03-kids-together.yaml
migrations/: 0001_init.sql  0002_auth.sql  0003_users_is_admin.sql  0004_rules.sql  0005_engine.sql  0006_yolo_cache.sql  0007_managed_albums.sql  0008_album_managed_assets.sql  0009_asset_index.sql
scripts/: smoke-me-key.sh  smoke-oidc.sh
web/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+92 files in other folders)
