[package]
name = "immich-extended-common"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
hex = "0.4"
password-hash = { version = "0.5", features = ["alloc"] }
rand = "0.8"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
