[package]
name = "immich-extended-engine"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "engine"
path = "src/lib.rs"

[dependencies]
common = { package = "immich-extended-common", path = "../common" }
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "alloc"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"

[lints]
workspace = true
