[package]
name = "immich-extended-immich-client"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "immich_client"
path = "src/lib.rs"

[dependencies]
common = { package = "immich-extended-common", path = "../common" }

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
url = "2"

[lints]
workspace = true
