[package]
name = "immich-extended-server"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "immich-extended"
path = "src/main.rs"

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
common = { package = "immich-extended-common", path = "../common" }
engine = { package = "immich-extended-engine", path = "../engine" }
immich-client = { package = "immich-extended-immich-client", path = "../immich-client" }
yolo = { package = "immich-extended-yolo", path = "../yolo" }

anyhow = "1"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "fs"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
