[package]
name = "immich-extended-server"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "immich-extended"
path = "src/main.rs"

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
common = { package = "immich-extended-common", path = "../common" }
engine = { package = "immich-extended-engine", path = "../engine" }
immich-client = { package = "immich-extended-immich-client", path = "../immich-client" }
yolo = { package = "immich-extended-yolo", path = "../yolo" }

anyhow = "1"
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
openidconnect = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
] }
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "fs"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
base64 = "0.22"
http-body-util = "0.1"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
rsa = { version = "0.9", features = ["sha2"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"

[lints]
workspace = true
