[package]
name = "immich-extended-yolo"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "yolo"
path = "src/lib.rs"

[dependencies]
common = { package = "immich-extended-common", path = "../common" }
futures-util = "0.3"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ndarray = "0.16"
once_cell = "1"
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic", "ndarray"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process"] }

[lints]
workspace = true
